# cion

./: .gitpod.Dockerfile  .gitpod.yml  .readthedocs.yaml  LICENSE  README.md  README.rst  justfile  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  tests.yml
cion/: __init__.py  converters.py  exceptions.py  options.py  schema.py  types.py  validators.py
docs/: conf.py  custom_filters.rst  filters.rst  index.rst  quickstart.rst
docs/reference/: converters.rst  errors.rst  index.rst  options.rst  types.rst  validators.rst
examples/: basic.py  custom_filter.py
examples/aiohttp/: README.md  justfile  requirements.txt  server.py
neptune/: exceptions.py  schema.py  types.py  validators.py
tests/: test_converters.py  test_exceptions.py  test_options.py  test_schema.py  test_types.py  test_validators.py
tests/email/: emails  test_email.py
